minor text align left fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -85,7 +85,7 @@ h3 {
 p {
   color: var(--text-secondary);
   font-size: 1rem;
-  text-align: justify;
+  text-align: left;
 }
 
 a {
@@ -645,7 +645,7 @@ section.visible,
 
 .card p {
   font-size: 1rem;
-  text-align: justify;
+  text-align: left;
   padding: 0px 24px;
 }
 
